--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
+
+
+@layer base{
+    @font-face {
+        font-family: 'Empire';
+        src: url('../assets/fonts/Empires.otf');
+    }
+}
